[project]
name = "middle_finger"
version = "2025.1.0"
description = "Communication interface"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "grpcio>=1.74.0",
    "paho-mqtt>=2.1.0",
    "rich>=14.1.0",
]
[project.optional-dependencies]
mqtt = ["paho-mqtt>=1.6"]
grpc = ["grpcio>=1.60"]
grafana = ["grafanalib>=0.7.0"]
